# chess_engine

./: Agent.py  CLAUDE.md  CMakeLists.txt  ChessEnv.py  MCTS_simple.py  Neuralnet.py  README.md  data_loader.py  main.py  requirements.txt  utils.py
src/: AsyncMCTS.cpp  AsyncMCTS.h  CentralEvaluator.cpp  CentralEvaluator.h  ChessEnv.cpp  ChessEnv.h  Evaluator.cpp  Evaluator.h  MCTS.cpp  MCTS.h  ParallelSelfPlay.cpp  ParallelSelfPlay.h  SelfPlay.cpp  SelfPlay.h  main.cpp
tests/: test_data_loader.py  test_encoding.cpp  test_mcts.cpp  test_parallel.cpp
